--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=doctorlist
-#spring.data.mongodb.uri=mongodb://localhost:27017/doctorDB
-spring.data.mongodb.uri=mongodb+srv://mihirshigvan716:hgked9pIElN5YeCU@cluster0.rldzo.mongodb.net/doctorDB?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.uri=mongodb://localhost:27017/doctorDB
+#spring.data.mongodb.uri=mongodb+srv://mihirshigvan716:hgked9pIElN5YeCU@cluster0.rldzo.mongodb.net/doctorDB?retryWrites=true&w=majority&appName=Cluster0
 server.port=8080
 
